--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ stages:
   - build
   - deploy
 
-build-spider:
+build:
   stage: build
   image:
     name: gcr.io/kaniko-project/executor:v1.14.0-debug
@@ -14,9 +14,9 @@ build-spider:
       --destination "${CI_REGISTRY_IMAGE}:${CI_COMMIT_TAG}"
   rules:
     - changes:
-      - Dockerfile
-      - app/**/*
-      - requirements.txt
+        - Dockerfile
+        - app/**/*
+        - requirements.txt
 
 deploy:
   stage: deploy
