--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,7 @@ build:
       --context "${CI_PROJECT_DIR}"
       --dockerfile "${CI_PROJECT_DIR}/Dockerfile"
       --destination "${CI_REGISTRY_IMAGE}:${CI_COMMIT_TAG}"
+  when: manual
 
 
 deploy:
@@ -25,3 +26,4 @@ deploy:
     - kubectl apply -f k8s
     - kubectl get all -n production
     - kubectl rollout restart deployment spider-scrapy -n production
+  when: manual
