--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 mysql-connector-python
 scrapy
-dateparser
+dateparser==1.2.0
 python-dotenv
 beautifulsoup4
 lxml
 emoji
 extractnet
-goose3
-trafilatura
+goose3==3.1.20
+trafilatura==1.12.2
 numpy==1.26.4
+lxml_html_clean
